view/adminhtml/web/css/sequra-core.css
@charset "UTF-8";
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
#sequra-page {
  margin: 0;
  padding: 0;
  width: 100%;
  min-height: 100%;
  max-height: 100%;
  font-weight: 400;
  text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}
#sequra-page button,
#sequra-page a {
  cursor: pointer;
}
#sequra-page {
  /*
  description: 'Remove default browser button styles.'
  */
}
#sequra-page button {
  background: transparent;
  border: 0;
  padding: 0;
  font: inherit;
  color: inherit;
  text-decoration: inherit;
  text-transform: inherit;
}
#sequra-page a {
  text-decoration: none;
  color: inherit;
}
#sequra-page input,
#sequra-page textarea,
#sequra-page select,
#sequra-page button,
#sequra-page a {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  font-weight: inherit;
  text-decoration: inherit;
  text-transform: inherit;
}
#sequra-page button,
#sequra-page a,
#sequra-page ul,
#sequra-page li,
#sequra-page div,
#sequra-page tr,
#sequra-page input,
#sequra-page textarea {
  outline: none;
  box-sizing: border-box;
}
#sequra-page button:focus, #sequra-page button:hover,
#sequra-page a:focus,
#sequra-page a:hover,
#sequra-page ul:focus,
#sequra-page ul:hover,
#sequra-page li:focus,
#sequra-page li:hover,
#sequra-page div:focus,
#sequra-page div:hover,
#sequra-page tr:focus,
#sequra-page tr:hover,
#sequra-page input:focus,
#sequra-page input:hover,
#sequra-page textarea:focus,
#sequra-page textarea:hover {
  outline: none;
}
#sequra-page ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-inline-start: 0;
}
#sequra-page ul > li {
  margin: 0;
  padding: 0;
}
#sequra-page {
  /*
    description:
      'Fix placeholder styles (https://css-tricks.com/almanac/selectors/p/placeholder/).',
      '(default placeholder opacity)'
  */
}
#sequra-page input::placeholder {
  opacity: 1;
}
#sequra-page input::-ms-input-placeholder {
  opacity: 1;
}
#sequra-page input:-ms-input-placeholder {
  opacity: 1;
}
#sequra-page div,
#sequra-page p,
#sequra-page pre,
#sequra-page table,
#sequra-page form,
#sequra-page fieldset,
#sequra-page main,
#sequra-page header,
#sequra-page footer,
#sequra-page nav,
#sequra-page section,
#sequra-page ul,
#sequra-page li,
#sequra-page ol,
#sequra-page dl,
#sequra-page dt,
#sequra-page dd,
#sequra-page h1,
#sequra-page h2,
#sequra-page h3,
#sequra-page h4,
#sequra-page h5,
#sequra-page h6,
#sequra-page hr,
#sequra-page article,
#sequra-page aside,
#sequra-page details,
#sequra-page dialog,
#sequra-page figcaption,
#sequra-page figure {
  box-sizing: border-box;
}
#sequra-page h1,
#sequra-page h2,
#sequra-page h3,
#sequra-page h4,
#sequra-page h5,
#sequra-page h6,
#sequra-page p {
  margin: 0;
  padding: 0;
  text-decoration: inherit;
  text-transform: inherit;
}
#sequra-page p a {
  font-weight: normal;
}
#sequra-page button[disabled] {
  pointer-events: none;
}
#sequra-page button[disabled] > * {
  pointer-events: none;
}
#sequra-page *,
#sequra-page *:before,
#sequra-page *:after {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  text-rendering: geometricPrecision;
}

/* @doc(group) { name: 'sass-extend', title: 'Sass extend' } */
/* @doc(group) { name: 'helpers', title: 'Helpers'} */
/* @doc(function) {
  description: 'Concatenate strings',
  return: 'string that is joined from items',
  params: {
    $separator: 'string to use when concatenating values',
    $items: 'item csv list to concatenate',
  }
}
*/
/* @doc(group) { name: 'map', title: 'Map'} */
/* @doc(function) {
  description: 'Check if variable is map'
}
*/
/* @doc(function) {} */
/* @doc(function) {
  description: 'Get items from map',
  return: 'map item value',
}
*/
/* @doc(function) {
  description: 'Merge second map into the first map',
  return: 'new map which is result of the merge',
}
*/
#sequra-page h2 {
  font-weight: 600;
  font-size: 24px;
  line-height: 1.33;
  margin: 12px 0;
}

#sequra-page table {
  width: 100%;
  border-collapse: collapse;
}
#sequra-page table thead tr th {
  border-bottom: 1px solid #dce0e5;
}
#sequra-page table tr:not(:last-of-type) td {
  border-bottom: 1px solid #dce0e5;
}
#sequra-page table tr th, #sequra-page table tr td {
  text-align: center;
  padding: 14px;
}
#sequra-page table tr th.sqm--left-aligned, #sequra-page table tr td.sqm--left-aligned {
  text-align: left;
}
#sequra-page table tr th.sqm--blue-text, #sequra-page table tr td.sqm--blue-text {
  color: #0066ff;
}
#sequra-page table tr td {
  font-weight: 400;
}
#sequra-page table tr td:last-of-type {
  white-space: nowrap;
}
#sequra-page table tr th {
  font-weight: 600;
}

#sequra-page .sq-support-link {
  display: flex;
  color: #686565;
  position: absolute;
  top: calc(100% + 32px);
  left: 0;
  transition: color 0.2s;
}
#sequra-page .sq-support-link:hover {
  color: #000;
}
#sequra-page .sq-support-link::before {
  font-family: "sq-icons";
  content: "\e91c";
  line-height: 1;
  font-weight: 500;
  font-size: 20px;
}

#sequra-page #sq-page-wrapper {
  min-height: 100vh;
  padding: 30px 20px 60px 30px;
  background: #f3f6f9;
}
#sequra-page #sq-page-wrapper .sq-page-content-wrapper {
  position: relative;
  width: 100%;
}
#sequra-page #sq-page-wrapper .sq-page-content-wrapper .sq-version-header {
  position: relative;
  height: 25px;
  margin-bottom: 40px;
}
#sequra-page #sq-page-wrapper .sq-page-content-wrapper .sq-content-row {
  display: flex;
  column-gap: 32px;
}
#sequra-page #sq-page-wrapper .sq-page-content-wrapper .sq-content-row.sqs--no-version {
  margin-top: 126px;
}
@media (max-width: 1023.98px) {
  #sequra-page #sq-page-wrapper .sq-page-content-wrapper .sq-content-row {
    flex-direction: column;
    row-gap: 32px;
  }
}
/* ... */

